Adicionado endpoint para validação do banco de dados

--- a/src/ConsultersIT.API/appsettings.Development.json
+++ b/src/ConsultersIT.API/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },  
   "ConnectionStrings": {
-    "PostgresDb": "Host=localhost;Port=5432;Database=barbearia;User Id=postgres;password=1234"
+    "PostgresDb": "Host=localhost;Port=5432;Database=postgres;User Id=admconsultoria;password=Amil@2015"
   }
 }
