--- a/src/ConsultersIT.API/ConsultersIT.API.csproj
+++ b/src/ConsultersIT.API/ConsultersIT.API.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.15"/>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2"/>
+        <PackageReference Include="AspNetCore.HealthChecks.NpgSql" Version="6.0.1" />
     </ItemGroup>
 
     <ItemGroup>
