--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,6 +17,17 @@ variables:
 steps:
 - task: NuGetToolInstaller@1
 
+- script: type D:\a\1\s\ConsultersIT.sln
+  displayName: 'Check solution file content'
+
+- checkout: self
+  clean: true
+
+- task: NuGetCommand@2
+  displayName: 'NuGet restore'
+  inputs:
+    restoreSolution: '$(solution)'
+
 - task: VSBuild@1
   inputs:
     solution: '$(solution)'
