--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,10 +1,10 @@
 trigger:
 - main
 
-pool: myUbuntu
+pool: WinPool
 
 variables:
-  solution: '**/ConsultersIT.sln'  # Específico em vez de genérico
+  solution: '**/ConsultersIT.sln'
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
 
@@ -13,7 +13,6 @@ steps:
   clean: true
 
 - powershell: |
-    # Verificação robusta do arquivo .sln
     $slnPath = "$(Build.SourcesDirectory)\ConsultersIT.sln"
     if (-not (Test-Path $slnPath)) {
         Write-Host "##vso[task.logissue type=error]Arquivo .sln não encontrado em $slnPath"
