--- a/src/ConsultersIT.API/appsettings.Development.json
+++ b/src/ConsultersIT.API/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },  
   "ConnectionStrings": {
-    "PostgresDb": ""
+    "DefaultConnection": "${ConnectionStrings__DefaultConnection}"
   }
 }
