--- a/src/ConsultersIT.API/appsettings.json
+++ b/src/ConsultersIT.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "${ConnectionStrings__DefaultConnection}"
+    "PostgresDb": ""
   }
 }
